// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GovernmentServicesCustomFields should render correctly regardless of properties 1`] = `
<div>
  <label
    className="label-result"
  >
    Rates and fees (CAD)
  </label>
  <p>
     
    666 per day
  </p>
</div>
`;

exports[`HomeServiceBusinessCustomFields should render correctly regardless of properties 1`] = `
<div>
  <label
    className="label-result"
  >
    Rates and fees (CAD)
  </label>
  <p>
     
    666 per day
  </p>
  <div>
    <label
      className="label-result"
    >
      Pictures
    </label>
    <div>
      <div
        className="lightbox-container"
      >
        <img
          className="lightbox-img-thumbnail"
          onClick={[Function]}
          src="/uploads/listings/1/testimage1.png"
          style={
            Object {
              "height": "80px",
              "width": "80px",
            }
          }
        />
        <img
          className="lightbox-img-thumbnail"
          onClick={[Function]}
          src="/uploads/listings/1/testimage2.png"
          style={
            Object {
              "height": "80px",
              "width": "80px",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
